first full attempt

--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Homework Wireframe</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<div class="container">
+		<div class="box-1">
+			<head>Header</head>
+		</div>
+		<br>
+		<div class="box-2">
+			<nav>Nav</nav>
+		</div>
+	<br>
+	<div class="wrapper">
+		<div class="mini-container">
+			<section class="left"> section
+				<div class="box-4">
+					<article>article</article>
+						<div class="white">
+							<p><strong>h1, h2, h3</strong><p>
+						</div>
+						<div class="white">
+							<p>p</p>
+						</div>
+				</div>
+			</section>
+		</div>
+	<br>
+		<div class="box-5 right">
+			<aside>aside</aside>
+		</div>
+	</div>	
+		<br>
+		<br>
+			<div class="box-6">
+				<footer>Footer</footer>
+			</div>
+		</div>
+</body>
+</html>
