--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 			<nav>Nav</nav>
 		</div>
 	<br>
-	<div class="wrapper">
 		<div class="mini-container">
 			<section class="left"> section
 				<div class="box-4">
@@ -22,22 +21,20 @@
 						<div class="white">
 							<p><strong>h1, h2, h3</strong><p>
 						</div>
-						<div class="white">
+						<div class="white p-spacing">
 							<p>p</p>
 						</div>
+						<br>
 				</div>
 			</section>
-		</div>
 	<br>
-		<div class="box-5 right">
-			<aside>aside</aside>
-		</div>
-	</div>	
-		<br>
-		<br>
+				<div class="box-5 right">
+					<aside>aside</aside>
+				</div>
+		</div>	
 			<div class="box-6">
 				<footer>Footer</footer>
 			</div>
-		</div>
+	</div>
 </body>
 </html>
